# modern-cpp-playground

modern_cpp/: 000_stack_demo.cpp  001_auto_nullptr_and_range_for.cpp  001_auto_nullptr_and_range_for_03.cpp  002_decltype_demonstrating.cpp  002_decltype_examples.cpp  003_raii_example.cpp  003_raii_file_write.cpp  004_file.txt  004_word_frequencies_counting.cpp  004_word_frequency_counter.cpp  004_word_frequency_counter_hello_world.cpp  004_word_frequency_counter_on_file.cpp  005_move_copy_demo.cpp  005_move_vs_copy_performance.cpp  005_move_vs_copy_semantics_performance.cpp  005_move_vs_copy_timing.cpp  006_concurrent_analysis.cpp  006_concurrent_stock_data_analyzer.cpp  auto_nullptr_and_range_for.cpp  auto_nullptr_and_range_for_02.cpp  print_type_of_a_variable.cpp
projects/: CMakeLists.txt
projects/calculator/: CMakeLists.txt
projects/calculator/src/: main.cpp  stack_demo.cpp  stack_trace.cpp  stack_trace.h
